--- a/mobile/mobile-style.css
+++ b/mobile/mobile-style.css
@@ -6,7 +6,6 @@
     url(https://m.media-amazon.com/images/S/sash/e0LnMbFWJC-TMQz.woff)
       format("woff");
 }
-
 @font-face {
   font-family: "Amazon Ember";
   font-weight: 200;
@@ -16,7 +15,6 @@
     url(https://m.media-amazon.com/images/S/sash/twzZHebXjCHBb6v.woff)
       format("woff");
 }
-
 @font-face {
   font-family: "Amazon Ember";
   src: url(https://m.media-amazon.com/images/S/sash/pDxWAF1pBB0dzGB.woff2)
@@ -24,7 +22,6 @@
     url(https://m.media-amazon.com/images/S/sash/kfKKBuoqcD$AUKL.woff)
       format("woff");
 }
-
 @font-face {
   font-family: "Amazon Ember";
   font-style: italic;
@@ -33,7 +30,6 @@
     url(https://m.media-amazon.com/images/S/sash/JJsp0ZvgpfwzJM6.woff)
       format("woff");
 }
-
 @font-face {
   font-family: "Amazon Ember";
   font-weight: 500;
@@ -42,7 +38,6 @@
     url(https://m.media-amazon.com/images/S/sash/XIvhNCZAsrT80Wz.woff)
       format("woff");
 }
-
 @font-face {
   font-family: "Amazon Ember";
   font-weight: 500;
@@ -52,7 +47,6 @@
     url(https://m.media-amazon.com/images/S/sash/YAEPfuhs1l-argd.woff)
       format("woff");
 }
-
 @font-face {
   font-family: "Amazon Ember";
   font-weight: 700;
@@ -61,7 +55,6 @@
     url(https://m.media-amazon.com/images/S/sash/mzVbGSgvdBfRLX9.woff)
       format("woff");
 }
-
 @font-face {
   font-family: "Amazon Ember";
   font-style: italic;
@@ -71,7 +64,6 @@
     url(https://m.media-amazon.com/images/S/sash/CjbL$jCCegyfqZ7.woff)
       format("woff");
 }
-
 * {
   margin: 0;
   padding: 0;
@@ -357,7 +349,6 @@ header {
   grid-column: 1 / -1;
   border-bottom: 0;
 }
-
 .body-header .body-header-in {
   display: flex;
   justify-content: space-between;
@@ -401,7 +392,6 @@ header {
   margin-inline-end: 4px;
   margin-bottom: -0.8px;
 }
-
 .switch-btn-span {
   display: inline-block;
   line-height: 0;
@@ -602,7 +592,6 @@ header {
   left: 5px;
   padding: 4px 0px 0px 4px;
 }
-
 .mobile-image-sec .mobile-image-in {
   display: flex;
   flex-direction: column;
@@ -619,13 +608,12 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 62px 0px;
+  padding: 77px 0px;
 }
 .image-contain img {
   max-height: 170px;
   max-width: 100%;
 }
-
 .section-right {
   display: block;
   width: calc(0.58333 * (100vw - 8px));
@@ -652,6 +640,11 @@ header {
   font-size: 14px !important;
   line-height: 20px !important;
   font-weight: 400;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .rating-detail-div {
   padding-top: 4px;
@@ -664,13 +657,25 @@ header {
   align-items: center;
   justify-items: center;
 }
+.ltd-offer-div {
+  margin-top: 4px;
+  display: inline-block;
+  background-color: #cc0c39 !important;
+  color: #ffffff !important;
+  border-radius: 2px;
+  padding: 4px 6px 5px 6px !important;
+  font-weight: 700;
+  font-size: 12px;
+}
 .rating-section i {
   display: block;
   position: relative;
-  top: 1.3px;
-  background-image: url("../images/five-star-small.png");
-  margin-left: 2px;
+  bottom: 1.3px;
+  background-image: url(https://m.media-amazon.com/images/S/sash/Zf4KcHNXMx7zzfI.png);
+  background-size: 512px 512px;
+  background-position: -14px -351px;
   background-repeat: no-repeat;
+  margin-left: 2px;
   height: 12px;
   width: 60px;
 }
@@ -767,6 +772,7 @@ header {
   padding: 0;
   text-align: center;
   text-decoration: none;
+
   cursor: pointer;
   border-style: solid;
 }
@@ -794,11 +800,9 @@ header {
   max-height: 80vh;
   overflow-y: auto;
 }
-
 .filter-section.show {
   bottom: 0;
 }
-
 .overlay {
   position: fixed;
   top: 0;
@@ -809,11 +813,9 @@ header {
   z-index: 999;
   display: none;
 }
-
 .overlay.show {
   display: block;
 }
-
 .filter-header {
   display: flex;
   justify-content: space-between;
@@ -822,12 +824,10 @@ header {
   padding-bottom: 12px;
   border-bottom: 1px solid #e7e7e7;
 }
-
 .filter-title {
   font-size: 18px;
   font-weight: 700;
 }
-
 .close-filter {
   background: none;
   border: none;
@@ -835,24 +835,20 @@ header {
   color: #0066c0;
   cursor: pointer;
 }
-
 .filter-actions {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
 }
-
 .filter-actions button {
   padding: 10px 20px;
   border-radius: 8px;
   font-weight: 500;
 }
-
 .reset-btn {
   background: none;
   border: 1px solid #ddd;
 }
-
 .apply-btn {
   background-color: #ffa41c;
   border: 1px solid #ffa41c;
